--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -3,12 +3,254 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.CategoriesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Fragment Categorias" />
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="155dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="110dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                app:cardBackgroundColor="@color/cardview_shadow_end_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imgCategoría1"
+                        android:layout_width="match_parent"
+                        android:layout_height="92dp"
+                        app:srcCompat="@drawable/caricon" />
+
+                    <TextView
+                        android:id="@+id/nombreCategoría1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Motor"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="110dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                app:cardBackgroundColor="@color/cardview_shadow_end_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imgCategoría2"
+                        android:layout_width="match_parent"
+                        android:layout_height="92dp"
+                        app:srcCompat="@drawable/houseicon" />
+
+                    <TextView
+                        android:id="@+id/nombreCategoría2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Inmobiliaria"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="110dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                app:cardBackgroundColor="@color/cardview_shadow_end_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imgCategoría3"
+                        android:layout_width="match_parent"
+                        android:layout_height="92dp"
+                        app:srcCompat="@drawable/controllericon" />
+
+                    <TextView
+                        android:id="@+id/nombreCategoría3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Juegos"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="155dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="110dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                app:cardBackgroundColor="@color/cardview_shadow_end_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imgCategoría4"
+                        android:layout_width="match_parent"
+                        android:layout_height="92dp"
+                        app:srcCompat="@drawable/laptopicon" />
+
+                    <TextView
+                        android:id="@+id/nombreCategoría4"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Informática"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="110dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                app:cardBackgroundColor="@color/cardview_shadow_end_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imgCategoría5"
+                        android:layout_width="match_parent"
+                        android:layout_height="92dp"
+                        app:srcCompat="@drawable/mobile_phone_2642" />
+
+                    <TextView
+                        android:id="@+id/nombreCategoría5"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Telefonía"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="110dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                app:cardBackgroundColor="@color/cardview_shadow_end_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imgCategoría6"
+                        android:layout_width="match_parent"
+                        android:layout_height="92dp"
+                        app:srcCompat="@drawable/modaicon" />
+
+                    <TextView
+                        android:id="@+id/nombreCategoría6"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Moda"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="155dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="110dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                app:cardBackgroundColor="@color/cardview_shadow_end_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imgCategoría8"
+                        android:layout_width="match_parent"
+                        android:layout_height="92dp"
+                        app:srcCompat="@drawable/sporticon" />
+
+                    <TextView
+                        android:id="@+id/nombreCategoría8"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Deportes"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </LinearLayout>
 
 </FrameLayout>
