--- a/app/src/main/res/layout/item_list_producto.xml
+++ b/app/src/main/res/layout/item_list_producto.xml
@@ -5,11 +5,12 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_width="370dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,10 +34,10 @@
 
                     <TextView
                         android:id="@+id/nombreProducto"
-                        android:textSize="18sp"
                         android:layout_width="match_parent"
                         android:layout_height="31dp"
-                        android:text="TextView" />
+                        android:text="TextView"
+                        android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/categoriaProducto"
@@ -53,7 +54,8 @@
                     <TextView
                         android:id="@+id/precioProducto"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="30dp"
+                        android:textSize="18sp"
                         android:text="TextView" />
                 </LinearLayout>
             </LinearLayout>
