--- a/app/src/main/res/layout/item_list_producto.xml
+++ b/app/src/main/res/layout/item_list_producto.xml
@@ -8,6 +8,7 @@
         android:layout_width="370dp"
         android:layout_height="100dp"
         android:layout_marginTop="8dp"
+        app:cardBackgroundColor="#00FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -15,6 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/round_white_bg"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -55,8 +57,8 @@
                         android:id="@+id/precioProducto"
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
-                        android:textSize="18sp"
-                        android:text="TextView" />
+                        android:text="TextView"
+                        android:textSize="18sp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
