--- a/app/src/main/res/layout/fragment_sell.xml
+++ b/app/src/main/res/layout/fragment_sell.xml
@@ -63,11 +63,25 @@
             android:id="@+id/spinnerCategoria"
             android:layout_width="170dp"
 
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginTop="8dp"
+            android:background="@drawable/round_white_edit"
+            android:contentDescription="Categoría"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnImagenes" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="3dp"
+            android:src="@drawable/downarrow"
+            app:layout_constraintBottom_toBottomOf="@+id/spinnerCategoria"
+            app:layout_constraintEnd_toEndOf="@+id/spinnerCategoria"
+            app:layout_constraintTop_toTopOf="@+id/spinnerCategoria"
+            app:tint="#2196F3" />
 
         <EditText
             android:id="@+id/etPrecioProducto"
