--- a/app/src/main/res/layout/fragment_sell.xml
+++ b/app/src/main/res/layout/fragment_sell.xml
@@ -14,11 +14,12 @@
             android:id="@+id/ivImagenProducto"
             android:layout_width="wrap_content"
             android:layout_height="191dp"
-            android:layout_marginTop="8dp"
             android:src="@drawable/insert_image_ico"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/btnImagenes"
@@ -26,50 +27,58 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Añadir imagenes"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivImagenProducto" />
+            app:layout_constraintTop_toBottomOf="@+id/ivImagenProducto"
+            app:layout_constraintVertical_bias="0.0" />
 
         <EditText
             android:id="@+id/etNombreProducto"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/round_white_edit"
             android:ems="10"
             android:hint="Nombre del Producto*"
             android:inputType="textPersonName"
             android:minHeight="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria" />
+            app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria"
+            app:layout_constraintVertical_bias="0.0" />
 
         <EditText
             android:id="@+id/etDescripcionProducto"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="60dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/round_white_edit"
             android:ems="10"
             android:hint="Descripción*"
             android:inputType="textPersonName"
             android:minHeight="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etNombreProducto" />
+            app:layout_constraintTop_toBottomOf="@+id/etNombreProducto"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Spinner
             android:id="@+id/spinnerCategoria"
             android:layout_width="170dp"
 
-            android:layout_height="48dp"
+            android:layout_height="45dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/round_white_edit"
             android:contentDescription="Categoría"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnImagenes" />
+            app:layout_constraintTop_toBottomOf="@+id/btnImagenes"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -86,27 +95,32 @@
         <EditText
             android:id="@+id/etPrecioProducto"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/round_white_edit"
             android:ems="10"
             android:hint="Precio*"
             android:inputType="number"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etDescripcionProducto" />
+            app:layout_constraintTop_toBottomOf="@+id/etDescripcionProducto"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/btnSubelo"
             android:layout_width="200dp"
             android:layout_height="55dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
             android:text="Súbelo"
             android:textSize="18sp"
             app:backgroundTint="@color/purple_200"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etPrecioProducto" />
+            app:layout_constraintTop_toBottomOf="@+id/etPrecioProducto"
+            app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
